Issue #30 - displayed truncated stripped version of event description on calendar and event list page

--- a/esporx-webapp/src/main/webapp/static/css/event.css
+++ b/esporx-webapp/src/main/webapp/static/css/event.css
@@ -5,8 +5,9 @@ a { cursor:pointer; text-decoration:none; color: #DDD;}
 #eventList { padding: 32px 0 0; background-color: rgba(8, 8, 4, 0.2); border-radius: 4px 4px 0 0; overflow: auto;}
 .eventBox { margin: 0 0 12px 1.5%; background-color: rgba(238,238,238,0.1); width: 31%; min-height: 140px; float: left;}
 .eventTitle { background-color: rgba(65, 75, 102, 0.8); color: #DDD; font-weight: 500;}
-.eventDescription { font-size:0.7em; font-style:italic; padding:20px; background-color:rgba(238,238,238,0.2);}
-.eventDescription:before, .eventDescription:after { background: none repeat scroll 0 0 rgba(186, 207, 255, 0.2); bottom:5px; content: ""; height: 8px; position: absolute; width: 3px;}
+
+.eventBox blockquote { font-size:9pt; word-wrap: break-word; padding:10px;}
+
 .casts { list-style-type:none;}
 
 /** event index **/
